Fixed Navbar closing issue on Mobile

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -70,4 +70,15 @@ nav ul li {
   .hide-mobile-menu {
     right: -210px;
   }
+  .mobile-nav {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: 100;
+    opacity: 0.1;
+    background: rgba(0, 0, 0, 0.9);
+  }
+  .hide-div {
+    display: none;
+  }
 }
